tests/ui/derive/fail_validate_serde_skip_deserializing_rule.rs
#[derive(foundry::Validate)]
struct SkipDeserializingRule {
    #[serde(skip_deserializing)]
    #[validate(required)]
    server_only: String,
}

fn main() {}
